# myojin

./: .gitignore  ConduitOutcome.m  Makefile  N_vs_phi_checks.m  OutComeCodeTable.csv  README.md  README.md~  Untitled.ipynb  conduitRunQCplots.m  config.m  environment.yml  manualSweepTests.m  manualSweepTests.m~  mat_tools.py  myojin_sweep_plots.ipynb  process_conduit_outcomes.py  pyproject.toml  run_refined_conduit_search.m  set_project_path.m  simplifyOutcomeCodes.m  sweepProjectInput.m  sweepProjectInput.m~  sweepProjectInput_2_2024_04.m  testing_RegimeTransitionPlotLines.m  testing_RegimeTransitionPlotLines.py
.ipynb_checkpoints/: myojin_sweep_plots-checkpoint.ipynb
.virtual_documents/: Untitled.ipynb  myojin_sweep_plots.ipynb
conduit_sweep_scripts/: getAllResultsTable.m  makeSweepScatterPlots.m  manualSweepTests.m  sweepProjectInput.m
data/: ConduitSweepsDataTable.mat  ConduitSweepsDataTableB.mat  MyojinSampleDataTable.mat
figure_scripts/: makeFilteredScatterPlots.m  makeSupplementalVarSweepPlots.m  makeSweepScatterPlots.m  makeSweepScatterPlots_20250322.m
myojin_python/: config.py  mat_tools.py  process_conduit_outcomes.py
plot_tools/: getCodeMarker.m  pasteljet.m  plotVariableAllSweeps.m  printpdf.m
references/: simplifiedOutComeCodeTable.csv
sandbox_scripts/: BND_&_H20_ex_multilinear_fits.mat  MyojinSamplesData.m  N_vs_phi_checks.m  bnd_h2o_MLRFits.m
utils/: EoS_H2O_2.m  closest.m  meltH2Osolubility.m
