[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "myojin_python"
version = "0.0.1"
description = "Scripts and function to process output of volcanic conduit model parameter sweeps, for a project on Myojin Knoll volcano."
authors = [
  { name = "Colin Rowell" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["myojin_python"]
force_sort_within_sections = true
